add more modules to openrouter provider

--- a/spec/20260202T235329-task-planner.md
+++ b/spec/20260202T235329-task-planner.md
@@ -1,1 +1,74 @@
-Store tasks in db by session id, track active step, retry count, output, step type (free form, structured output)
+# Task Planner
+
+**Date**: 2026-02-16
+**Status**: Planning
+**Author**: AI-assisted
+
+## Overview
+
+Introduce a structured task planning and execution system that allows agents to break down complex goals into a sequence of steps, track their progress, handle retries, and persist the execution state in the database. This enables more robust autonomous behavior, especially for long-running or multi-stage tasks.
+
+## Motivation
+
+### Current State
+
+The `task` tool (implemented in `internal/llm/agent/agent-tool.go`) allows spawning a subagent for a given prompt, but it's largely a "fire and forget" mechanism from the perspective of the parent agent's state. There is no structured way to:
+
+1. **Visualize progress**: The parent agent only sees the final result of the subagent.
+2. **Resume partially completed tasks**: If a task is interrupted, there's no record of which steps were completed.
+3. **Structured planning**: The agent just provides a prompt, and the subagent decides what to do. There's no explicit "plan" shared between them or persisted.
+4. **Retry logic**: Retries are handled ad-hoc or not at all at the step level.
+
+### Desired State
+
+A `tasks` table in the database that stores:
+- `id`: Unique identifier for the task.
+- `session_id`: The session this task belongs to.
+- `title`: A human-readable title.
+- `status`: Current status (pending, running, completed, failed).
+- `current_step_index`: Which step is currently being executed.
+- `steps`: A JSON-serialized list of steps.
+- `created_at`, `updated_at`: Timestamps.
+
+Each `step` in the JSON list should include:
+- `id`: Step ID.
+- `description`: What this step is supposed to do.
+- `type`: `freeform` or `structured`.
+- `status`: `pending`, `running`, `completed`, `failed`.
+- `retry_count`: How many times this step has been retried.
+- `output`: The output of the step.
+- `error`: Any error message if it failed.
+
+## Implementation Plan
+
+### Phase 1: Database Schema
+
+- [ ] Create migration adding `tasks` table (SQLite & MySQL).
+- [ ] Create `internal/db/sql/tasks.sql` with CRUD operations.
+- [ ] Regenerate sqlc code.
+
+### Phase 2: Task Service
+
+- [ ] Create `internal/task/task.go` with `Service` interface and implementation.
+- [ ] Implement task creation, step updates, and status tracking.
+
+### Phase 3: Agent Integration
+
+- [ ] Update `hivemind` agent prompt to encourage structured planning.
+- [ ] Add a `plan_task` tool that allows agents to create a task with multiple steps.
+- [ ] Add an `update_step` tool to mark steps as completed or failed.
+- [ ] Update `task` tool to optionally reference a task/step ID.
+
+### Phase 4: TUI Integration
+
+- [ ] Add a "Tasks" tab or sidebar section to visualize active tasks and their steps.
+- [ ] Show progress indicators for tasks in the chat view.
+
+## Success Criteria
+
+- Agents can create multi-step plans.
+- Task state is persisted and survives restarts.
+- Progress is visible in the TUI.
+- Failed steps can be retried with full context of previous attempts.
+- Hivemind agent effectively uses the planning system to coordinate complex work.
+
